# Robocup3DVision

./: .gitignore  README.md
calibration/: CMakeLists.txt
calibration/src0/: capture_images.cpp
calibration/src2/: calibrate_camera_charuco.cpp
calibration/src3/: ex_cali.cpp
detect_BCode/: CMakeLists.txt
detect_BCode/include/: detect.h  filter.h  find_ball.h  pose.h
detect_BCode/src/: detect.cpp  filter.cpp  find_ball.cpp  main.cpp  pose.cpp
find_ball/: build.sh  find_ball.cpp  find_ball.h  main.cpp  param.txt
image_proc/: build.sh  image_proc.cpp  main
